--- a/templates/index.html
+++ b/templates/index.html
@@ -1,20 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>ProMan</title>
-
-        <link rel="shortcut icon" href="{{ url_for('static', filename='favicon/favicon.ico') }}">
-        <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='favicon/favicon-32x32.png') }}">
-        <link rel="icon" type="image/png" sizes="96x96" href="{{ url_for('static', filename='favicon/favicon-96x96.png') }}">
-        <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='favicon/favicon-16x16.png') }}">
-
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
-        <script type="module" src="{{ url_for('static', filename='js/main.js') }}" defer></script>
-    </head>
-    <body>
-        <div id="root"></div>
-    </body>
+<html>
+<head>
+    <title>Home</title>
+    <!-- You can include CSS stylesheets here for better appearance -->
+</head>
+<body>
+    <h1>Welcome to our application!</h1>
+    {% if current_user.is_authenticated %}
+        <p>Welcome back, {{ current_user.username }}! <a href="{{ url_for('logout') }}">Logout</a></p>
+    {% else %}
+        <a href="{{ url_for('login') }}">Login</a> or 
+        <a href="{{ url_for('register') }}">Register</a>
+    {% endif %}
+</body>
 </html>
